# serializer version: 1
# name: test_run_creates_library[gfx942_default]
  list([
    'KernelHeader.h',
    'Kernels.cpp',
    'Kernels.h',
    'ReductionTemplate.h',
    'TensileTypes.h',
    'library/gfx942/Kernels.so-000-gfx942.hsaco',
    'library/gfx942/TensileLibrary_HH_SH_HA_Bias_SAV_Type_HS_HPA_Contraction_l_Alik_Bjlk_Cijk_Dijk_gfx942.co',
    'library/gfx942/TensileLibrary_HH_SH_HA_Bias_SAV_Type_HS_HPA_Contraction_l_Alik_Bjlk_Cijk_Dijk_gfx942.dat',
    'library/gfx942/TensileLibrary_lazy_gfx942.dat',
    'library/gfx942/TensileLiteLibrary_lazy_gfx942_Mapping.dat',
    'memory_gfx.h',
    'tensile_bfloat16.h',
    'tensile_float8_bfloat8.h',
  ])
# ---
# name: test_run_creates_library[gfx942_msgpack]
  list([
    'KernelHeader.h',
    'Kernels.cpp',
    'Kernels.h',
    'ReductionTemplate.h',
    'TensileTypes.h',
    'library/gfx942/Kernels.so-000-gfx942.hsaco',
    'library/gfx942/TensileLibrary_HH_SH_HA_Bias_SAV_Type_HS_HPA_Contraction_l_Alik_Bjlk_Cijk_Dijk_gfx942.co',
    'library/gfx942/TensileLibrary_HH_SH_HA_Bias_SAV_Type_HS_HPA_Contraction_l_Alik_Bjlk_Cijk_Dijk_gfx942.dat',
    'library/gfx942/TensileLibrary_lazy_gfx942.dat',
    'library/gfx942/TensileLiteLibrary_lazy_gfx942_Mapping.dat',
    'memory_gfx.h',
    'tensile_bfloat16.h',
    'tensile_float8_bfloat8.h',
  ])
# ---
# name: test_run_creates_library[gfx942_no_lazy]
  list([
    'KernelHeader.h',
    'Kernels.cpp',
    'Kernels.h',
    'ReductionTemplate.h',
    'TensileTypes.h',
    'library/gfx942/Kernels.so-000-gfx942.hsaco',
    'library/gfx942/TensileLibrary_gfx942.co',
    'library/gfx942/TensileLibrary_gfx942.dat',
    'memory_gfx.h',
    'tensile_bfloat16.h',
    'tensile_float8_bfloat8.h',
  ])
# ---
# name: test_run_creates_library[gfx950_default]
  list([
    'KernelHeader.h',
    'Kernels.cpp',
    'Kernels.h',
    'ReductionTemplate.h',
    'TensileTypes.h',
    'library/gfx950/Kernels.so-000-gfx950.hsaco',
    'library/gfx950/TensileLibrary_HH_SH_HA_Bias_SAV_Type_HS_HPA_Contraction_l_Alik_Bjlk_Cijk_Dijk_ID75a0_gfx950.co',
    'library/gfx950/TensileLibrary_HH_SH_HA_Bias_SAV_Type_HS_HPA_Contraction_l_Alik_Bjlk_Cijk_Dijk_ID75a0_gfx950.dat',
    'library/gfx950/TensileLibrary_lazy_gfx950.dat',
    'library/gfx950/TensileLiteLibrary_lazy_gfx950_Mapping.dat',
    'memory_gfx.h',
    'tensile_bfloat16.h',
    'tensile_float8_bfloat8.h',
  ])
# ---
